--- a/client/styles.scss
+++ b/client/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
-
-body {
-  margin-top: 15px;
-  margin-bottom: 10px;
+.navbar {
+  height: 100px;
+  a {
+    color: #000;
+  }
 }
