--- a/client/app/home/home.component.html
+++ b/client/app/home/home.component.html
@@ -1,21 +1,22 @@
-<div class="card" *ngIf="isLoading">
-        <h4 class="card-header">Loading...</h4>
-        <div class="card-block text-xs-center">
-                <i class="fa fa-circle-o-notch fa-spin fa-3x"></i>
-        </div>
-</div>
 <app-toast [message]="toast.message"></app-toast>
 <div class="card">
         <h4 [hidden]="Submitted"  class="card-header">Add new product</h4>
         <div class="card-block">
-                <form  [hidden]="Submitted" class="form-inline" [formGroup]="addProductForm" (ngSubmit)="addProduct()" style="text-align:center">
-                        <div class="form-group">
-                                <input class="form-control" type="text" name="name" formControlName="name" placeholder="Name">
+                <form  [hidden]="Submitted" class="" [formGroup]="addProductForm" (ngSubmit)="addProduct()" style="text-align:center">
+                        <div class="form-group form-horizontal">
+                                <label for="name" class="control-label col-sm-2">Name</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="text" name="name" formControlName="name" placeholder="Name">
+                                </div>
                          </div>
                         <div class="form-group">
-                                <input class="form-control" type="email" name="email" formControlName="email" placeholder="Email" min="0">
+                                <label for="email" class="control-label col-sm-2">Email</label>
+                                <div class="col-sm-10">
+                                    <input class="form-control" type="email" name="email" formControlName="email" placeholder="Email" min="0">
+                                </div>
                         </div>
                         <div class="form-group">
+                                <label for=""></label>
                                 <input type="text" name="product_invention_name" class="form-control" formControlName="product_invention_name" placeholder="Product/Invention Name">
                         </div>
                         <div class="form-group">
